Proyecto
	* Tests:
		ant test -Dnombre_clase=CanaTest

	* TODO:
		Masas: Primitivo B,C y Desarrollado B,C y Cristal

	* condiciones ant:
		https://gist.github.com/bcremer/6111530

	* Importar datos:
		csv: Tablas de configuración por el usuario (importGroovy y *.csv)
		sql: Transacciones de prueba (insert.sql)
		
	* Reflection:
		https://stackoverflow.com/questions/45737329/how-to-change-method-name-dynamically-in-loop-in-java
	
	* Nota 1:
	Cuando sale NullPointerException, revisar las propiedades de UI. Hay que revisar si los campos en la tabla no sean nulos.

	* Nota 2:
	En las propiedades calculadas no deben haber consultas JPA. Hay que usar una consulta previa llenando mapas.

	* Nota 3:
	En las propiedades calculadas no se deben hacer setters a otros miembros de clase. Eso provoca un ConcurrentException.

	https://trello.com/b/lZwKk47m/fabrica
	Locale: iso-8859-1

	https://sourceforge.net/p/openxava/discussion/437013/thread/83b3114767/?limit=25

	* groovy en ox 6.2.2:
		Reemplazo de [groovy-all-] de 2.4.5 a 2.4.19

		https://github.com/groovy/groovy-eclipse/issues/425
		https://repo1.maven.org/maven2/org/codehaus/groovy/groovy-all/

	* hsqldb:
		https://stackoverflow.com/questions/24613508/import-csv-file-in-hsqldb
		http://hsqldb.org/doc/2.0/guide/texttables-chapt.html

	* postgres:
		createdb -O postgres eneragro_test

		+ Listado de todos los esquemas:
		https://tableplus.com/blog/2018/04/postgresql-how-to-list-all-schemas.html

		SELECT schema_name FROM information_schema.schemata;
		SELECT nspname FROM pg_catalog.pg_namespace;

		+ Cambiar de esquema:
		https://stackoverflow.com/questions/34098326/how-to-select-a-schema-in-postgres-when-using-psql

		SHOW search_path;
		SET search_path TO ingenio;

		+ reiniciar secuencia:
		ALTER SEQUENCE seq RESTART WITH 1;
		UPDATE t SET idcolumn=nextval('seq');

	* Mode:
		1. persistence/META-INF/persistence.xml:
			hibernate.dialect
		2. context.xml:
			+ Develop: web/META-INF/context.xml