@@ -1,1 +1,3 @@
 # Labels for Ingenio application
+
+Ingenio=Ingenio
