@@ -10,6 +10,7 @@ initialPasswordForAdmin=admin
 startInLastVisitedModule=true
 showModulesMenuWhenNotLogged=true
 #fixModulesOnTopMenu=Invoice, Order
+#initialModule=Invoice
 
 # LDAP Config. LDAP is only available in XavaPro (http://www.openxava.org/xavapro)
 ldapHost=192.168.0.0
@@ -43,6 +44,7 @@ dropSchema.MySQL=DROP SCHEMA ${schema}
 # Other options
 showApplicationName=true
 showOrganizationOnSignIn=true
+showListOfOrganizationsOnSignIn=true
 
 # If false the server startup is faster, but new modules in your code are not recognized
 # Put it to false if you no longer add modules to your apps and have a lot of organizations
