@@ -1,6 +1,9 @@
 port=8080
 locale=en
 
+# By default the application name, uncomment to not use application name in the URL
+# contextPath=/
+
 # If jetspeed2.url is present tests against a jetspeed2 portal, 
 # else tests the modules directly
 #jetspeed2.url=openxava
