@@ -18,15 +18,17 @@ mapFacadeAutoCommit=false
 #portletLocales=en,es,ca,fr
 
 # Visual style
-#styleCSS=terra.css
-#styleCSS=light.css
+# styleCSS=terra.css
+# styleCSS=light.css
+# styleCSS=dark.css
+# styleCSS=black-and-white.css
+# styleCSS=blue.css
 
 # To do small modification over the current style just add your css rules to custom.css in web/xava/style 
-# To create a completely new style: 
-# - Copy and paste terra.css (or light.css) in web/xava/style folder as mystyle.css (or your own name)
-# - Modify web/xava/style/mystyle.css (just created)  at your own taste 
-# - Uncomment the next line
-#styleCSS=mystyle.css
+# To create a completely new style: https://www.openxava.org/OpenXavaDoc/docs/custom-style_en.html 
+
+# If you remove all themes the theme chooser is disabled
+themes=terra.css, light.css, dark.css, black-and-white.css, blue.css
 
 
 
