@@ -30,9 +30,9 @@ class CanaDetalle1 extends Identifiable {
     Cana cana
     
     @OnChange(CanaDetalle1Action.class)
-    @Stereotype("DATETIME") @Required
+    //@Stereotype("DATETIME") @Required
+    @Stereotype("FECHAHORA") @Required
     java.sql.Timestamp hora
-    //Date hora
 
     @OnChange(CanaDetalle1Action.class)
     BigDecimal wH2O
